# football-inplay-prediction

./: .gitignore  README.md  article.md  fig.py  flake.nix  justfile  package.json  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: docs.yml
docs/: architecture.md  development.md  index.md  roadmap.md  spec.md  structure.md
docs/_assets/: extra.css
src/fip/: __init__.py  download.py  evaluate.py  preprocess.py  train.py  utils.py
src/main/: __init__.py  __main__.py
src/tif/: __init__.py  config.py  download.py  evaluate.py  features.py  pipeline.py  plots.py  preprocess.py  train.py  utils.py
src/tif/data/: __init__.py  download.py  numeric.py  preprocess.py  sources.py  text.py
src/tif/entrypoints/: __init__.py  download.py  evaluate.py  features.py  plots.py  preprocess.py  run.py  train.py
src/tif/evaluation/: metrics.py
src/tif/features/: __init__.py  build.py
src/tif/models/: __init__.py
src/tif/training/: __init__.py  train.py
src/tif/visualization/: __init__.py  plots.py
src/turkish_inflation_forecasting/: pipeline.py
src/turkish_inflation_forecasting/data/: cpi.py  download.py  fx.py  numeric.py  preprocess.py  sources.py  text.py
src/turkish_inflation_forecasting/evaluation/: metrics.py
src/turkish_inflation_forecasting/features/: build.py
src/turkish_inflation_forecasting/models/: deep.py
src/turkish_inflation_forecasting/training/: train.py
src/turkish_inflation_forecasting/visualization/: plots.py
tests/: test_cpi.py  test_download.py  test_entrypoints.py  test_evaluate.py  test_evaluation.py  test_features.py  test_numeric.py  test_plots.py  test_preprocess.py  test_sources.py  test_text.py  test_train.py  test_utils.py
