[project]
name = "football-inplay-prediction"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "ty>=0.0.39",
]
docs = ["zensical>=0.0.43"]

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E", "F", "I", "UP"]
